--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "prettier-lint": "prettier --check .",
+    "prettier-format": "prettier --write ."
   },
   "dependencies": {
     "next": "15.5.0",
