--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "start": "next start",
         "lint": "eslint",
         "prettier-lint": "prettier --check .",
-        "prettier-format": "prettier --write ."
+        "prettier-format": "prettier --write .",
+        "prepare": "husky install"
     },
     "dependencies": {
         "next": "15.5.0",
@@ -35,9 +36,14 @@
         "@types/react-dom": "^19",
         "eslint": "^9",
         "eslint-config-next": "15.5.0",
+        "husky": "^9.1.7",
+        "lint-staged": "^16.1.5",
         "prettier": "^3.6.2",
         "prettier-plugin-organize-imports": "^4.2.0",
         "tailwindcss": "^4",
         "typescript": "^5"
+    },
+    "lint-staged": {
+        "*": "prettier --write --ignore-unknown"
     }
 }
