--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,3 +18,5 @@ jobs:
               run: npm run eslint
             - name: Prettier lint
               run: npm run prettier-lint
+            - name: Prisma format lint
+              run: npm run prisma-format-lint
