--- a/package.json
+++ b/package.json
@@ -29,27 +29,30 @@
         "prepare": "husky install"
     },
     "dependencies": {
-        "@prisma/client": "^6.14.0",
-        "next": "15.5.0",
-        "react": "19.1.0",
-        "react-dom": "19.1.0"
+        "@phosphor-icons/react": "^2.1.10",
+        "@prisma/client": "^6.16.2",
+        "next": "^15.5.4",
+        "openskill": "^4.1.0",
+        "react": "^19.1.1",
+        "react-dom": "^19.1.1"
     },
     "devDependencies": {
-        "@eslint/eslintrc": "^3",
-        "@tailwindcss/postcss": "^4",
-        "@types/node": "^20",
-        "@types/react": "^19",
-        "@types/react-dom": "^19",
-        "eslint": "^9",
-        "eslint-config-next": "15.5.0",
+        "@eslint/eslintrc": "^3.3.1",
+        "@tailwindcss/postcss": "^4.1.13",
+        "@types/node": "^24.5.2",
+        "@types/react": "^19.1.13",
+        "@types/react-dom": "^19.1.9",
+        "eslint": "^9.36.0",
+        "eslint-config-next": "^15.5.4",
         "husky": "^9.1.7",
-        "lint-staged": "^16.1.5",
+        "lint-staged": "^16.2.0",
         "prettier": "^3.6.2",
-        "prettier-plugin-organize-imports": "^4.2.0",
-        "prisma": "^6.14.0",
-        "tailwindcss": "^4",
-        "tsx": "^4.20.4",
-        "typescript": "^5"
+        "prettier-plugin-organize-imports": "^4.3.0",
+        "prettier-plugin-tailwindcss": "^0.6.14",
+        "prisma": "^6.16.2",
+        "tailwindcss": "^4.1.13",
+        "tsx": "^4.20.5",
+        "typescript": "^5.9.2"
     },
     "lint-staged": {
         "*": "prettier --write --ignore-unknown",
