--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,5 +4,5 @@
     "singleQuote": true,
     "printWidth": 120,
     "trailingComma": "es5",
-    "plugins": ["prettier-plugin-organize-imports"]
+    "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-tailwindcss"]
 }
