--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,7 @@
 name: Build
 on: [push, pull_request]
+env:
+    NEXT_SKIP_BUILD_STATIC_GENERATION: 'true'
 jobs:
     build:
         runs-on: ubuntu-latest
