--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@phosphor-icons/react": "^2.1.10",
         "@prisma/client": "^6.16.2",
         "next": "^15.5.4",
+        "next-auth": "^4.24.11",
         "openskill": "^4.1.0",
         "react": "^19.1.1",
         "react-dom": "^19.1.1"
