--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,8 @@ jobs:
                   node-version: 20
             - name: Install dependencies
               run: npm ci
+            - name: Generate Prisma client
+              run: npm run prisma-generate
             - name: Build
               run: npm run build
             - name: ESLint
