Creating a build script for Vercel to generate the Prisma client, apply the migrations, and build the application

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "private": true,
     "scripts": {
         "dev": "next dev",
+        "vercel-build": "prisma generate && prisma migrate deploy && next build",
         "build": "next build",
         "start": "next start",
         "eslint": "eslint",
