--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "private": true,
     "scripts": {
         "dev": "next dev",
-        "vercel-build": "prisma generate && prisma migrate deploy && next build",
+        "vercel-build": "prisma generate && next build",
         "build": "next build",
         "start": "next start",
         "eslint": "eslint",
